--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
 auxiliary.org-netbeans-modules-css-prep.sass_2e_configured=true
 auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
 auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+auxiliary.org-netbeans-modules-javascript-gulp.action_2e_build=build
 auxiliary.org-netbeans-modules-javascript-nodejs.enabled=true
 auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_default=true
 auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
@@ -13,12 +14,14 @@ auxiliary.org-netbeans-modules-javascript-nodejs.sync_2e_enabled=false
 browser.autorefresh.Chrome.INTEGRATED=true
 browser.highlightselection.Chrome.INTEGRATED=true
 browser.run=true
+file.reference.gulp-tmpl-dist=dist
 file.reference.Gulp_tmpl-dist=dist
 file.reference.Gulp_tmpl-public=public
 file.reference.Gulp_tmpl-src=src
+file.reference.Projects-gulp-tmpl=.
 file.reference.projects-Gulp_tmpl=.
 files.encoding=UTF-8
-site.root.folder=${file.reference.Gulp_tmpl-dist}
-source.folder=${file.reference.projects-Gulp_tmpl}
+site.root.folder=${file.reference.gulp-tmpl-dist}
+source.folder=${file.reference.Projects-gulp-tmpl}
 start.file=index.html
 web.context.root=/Gulp tmpl
