--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "browser-sync": "^2.18.7",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-cache": "^0.4.5",
     "gulp-cssnano": "^2.1.2",
     "gulp-imagemin": "^3.1.1",
+    "gulp-postcss": "^6.3.0",
     "gulp-sass": "^3.0.0",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.2",
