--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-postcss": "^6.3.0",
     "gulp-sass": "^3.0.0",
     "gulp-uglify": "^2.0.0",
+    "gulp-uncss": "^1.0.6",
     "gulp-useref": "^3.1.2",
     "run-sequence": "^1.2.2"
   }
